Fix semantics to satisfy markbot

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     <p>BABY I WOULD DIE FOR YOU</p>
   </div>
 
-  <h1 class="text-right milli">Weeknd</h1>
-
+  <div class="grid">
+    <div class="unit">
+      <h1 class="text-right milli">Weeknd</h1>
+    </div>
+  </div>
 </body>
 </html>
