--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="grid">
-    <div class="unit">
+    <div class="unit xs-1">
       <h1 class="text-right milli">Weeknd</h1>
     </div>
   </div>
